[package]
name = "ipfs-proxy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = [ "rustls" ] }
sqlx = { version = "0.5", features = [ "runtime-actix-rustls", "postgres" ] }