[package]
name = "ipfs-proxy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5.4"
actix-web = { version = "3", features = [ "rustls" ] }
futures-core = "0.3.17"
futures-util = "0.3.17"
sqlx = { version = "0.5", features = [ "runtime-actix-rustls", "postgres" ] }
