[package]
name = "ipfs-proxy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5.4"
actix-web = { version = "3", features = [ "rustls" ] }
actix-web-httpauth = "0.5.1"
derive_more = "0.99.16"
dotenv = "0.15.0"
env_logger = "0.9.0"
envy = "0.4.2"
futures = "0.3.17"
futures-core = "0.3.17"
futures-util = "0.3.17"
hmac = "0.11.0"
jwt = "0.14.0"
serde = "1.0.130"
sha2 = "0.9.6"
sqlx = { version = "0.4", features = [ "runtime-actix-rustls", "postgres", "offline", "uuid", "time" ] }
uuid = { version = "0.8.2", features = [ "serde", "v4" ] }
